service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: php-backend-dev
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer #NodePort #ClusterIP
